--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ __pycache__/
 .venv/
 venv/
 env/
+backend/.env
 
 # Android / Gradle
 android/.gradle/
@@ -31,4 +32,3 @@ captures/
 
 # Logs
 *.log
-
