--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,5 @@
-﻿org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -Dfile.encoding=UTF-8
+org.gradle.workers.max=2
 android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
