--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,8 @@
 GOOGLE_CLOUD_VISION_API_KEY=your_vision_api_key_here
 GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_MODEL=gemini-2.5-flash
+OCR_PIPELINE_MODE=hybrid
+MAX_MENU_ITEMS=10
 ENABLE_IMAGE_SEARCH=true
 IMAGE_SEARCH_PROVIDER=none
 GOOGLE_CSE_API_KEY=your_custom_search_api_key_here
